--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "ApexCloud",
-  "start_url": "/pwa/",
+  "start_url": "/ApexCloud/pwa/",
   "lang": "ru-RU",
   "theme_color": "#000000",
   "display": "standalone"
